[gd_scene load_steps=3 format=3 uid="uid://cgqqgr5rifb6h"]

[ext_resource type="Script" path="res://note detail stuffs/touch_hold.gd" id="1_c71yu"]

[sub_resource type="Curve2D" id="Curve2D_s80wk"]

[node name="TouchHold" type="Node2D"]
script = ExtResource("1_c71yu")

[node name="Note" type="Node2D" parent="."]

[node name="ProgressCircle" type="Node2D" parent="Note"]

[node name="Segments" type="Node2D" parent="Note"]

[node name="Segment0" type="Node2D" parent="Note/Segments"]

[node name="Path2D" type="Path2D" parent="Note/Segments/Segment0"]
curve = SubResource("Curve2D_s80wk")

[node name="PathFollow2D" type="PathFollow2D" parent="Note/Segments/Segment0/Path2D"]

[node name="Segment1" type="Node2D" parent="Note/Segments"]

[node name="Path2D" type="Path2D" parent="Note/Segments/Segment1"]
curve = SubResource("Curve2D_s80wk")

[node name="PathFollow2D" type="PathFollow2D" parent="Note/Segments/Segment1/Path2D"]

[node name="Segment2" type="Node2D" parent="Note/Segments"]

[node name="Path2D" type="Path2D" parent="Note/Segments/Segment2"]
curve = SubResource("Curve2D_s80wk")

[node name="PathFollow2D" type="PathFollow2D" parent="Note/Segments/Segment2/Path2D"]

[node name="Segment3" type="Node2D" parent="Note/Segments"]

[node name="Path2D" type="Path2D" parent="Note/Segments/Segment3"]
curve = SubResource("Curve2D_s80wk")

[node name="PathFollow2D" type="PathFollow2D" parent="Note/Segments/Segment3/Path2D"]

[node name="CenterDot" type="Node2D" parent="Note"]

[node name="SelectedHighlight" type="Line2D" parent="Note"]
closed = true
width = 3.0

[node name="Sliders" type="Node2D" parent="."]

[node name="TimelineIndicator" type="Node2D" parent="."]
